# qol

./: Cargo.toml  README.md  script.mjs
pkg/: qol.js  qol_bg.wasm
pkg/snippets/qol-18d2d3fc66278d10/web/: io.mjs
src/: codegen.rs  compiler.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
web/: index.html  io.mjs  style.css
