[package]
name = "qol"
version = "0.2.0"
edition = "2021"

[dependencies]
futures = "0.3"
gccjit = { version = "2.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[features]
default = ["gccjit"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures"]

[lib]
crate-type = ["lib", "cdylib"]
